# CRWAF-Core

./: CLAUDE.md  Cargo.toml  README.md  TODO.md  build.rs  test_phase1.rs
.claude/: settings.local.json
cache/: waf_cache.json
config/: config.toml
proto/: waf.proto
rules/: custom.json  custom_regex.json  test.json
src/: integration_tests.rs  lib.rs  main.rs  test.rs
src/core/: cache.rs  cache_manager.rs  cache_tests.rs  captcha.rs  captcha_tests.rs  config.rs  config_storage.rs  error.rs  grpc.rs  identity.rs  identity_tests.rs  logger.rs  mod.rs  statistics.rs  sync.rs
src/defense/: captcha.rs  challenge.rs  defense_tests.rs  frequency.rs  mod.rs  shield.rs  strategy.rs
src/http/: attack_analysis.rs  attack_logging.rs  forward.rs  handler.rs  mod.rs  server.rs  waf_handler.rs
src/http/middleware/: attack_detection.rs  error.rs  logging.rs  mod.rs
src/rules/: attack_detection_tests.rs  custom.json  default.json  detector.rs  detector_manager.rs  engine.rs  mod.rs  model.rs  parser.rs  rules_tests.rs  tests.rs
static/waf/: 5s-shield.html  challenge.js  click-challenge.js  click.html
