[package]
name = "crwaf"
version = "0.1.0"
edition = "2021"

[dependencies]
# 异步运行时
tokio = { version = "1.0", features = ["full"] }

# HTTP 服务器和客户端
hyper = { version = "0.14", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["full"] }
futures = "0.3"

# gRPC
tonic = "0.10"
prost = "0.12"
tokio-stream = { version = "0.1", features = ["net"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 内存缓存
dashmap = "5.5"
lru = "0.12"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 配置
config = "0.14"

# 文件压缩（用于日志轮转）
flate2 = { version = "1.0", optional = true }

# 正则表达式（用于WAF规则）
regex = "1.10"

# IP地址处理
ipnet = { version = "2.9", features = ["serde"] }

# UUID生成
uuid = { version = "1.6", features = ["v4"] }

# URL编码/解码
urlencoding = "2.1"

# 系统信息
sysinfo = "0.29"

[build-dependencies]
tonic-build = "0.10"
prost-build = "0.12"

[features]
default = ["compression"]
compression = ["flate2"]
